Setup working test kit

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"apps/**/*.ts\" --fix",
-    "test": "pnpx prisma generate --schema apps/prisma-sample/prisma/schema.prisma && pnpm nx affected:test",
+    "prisma:generate": "prisma generate --schema apps/prisma-sample/prisma/schema.prisma",
+    "test": "jest --runInBand --config=./jest.config.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
