fix websocket app, change socket io client to a new version

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,8 @@
     "baseUrl": ".",
     "incremental": true,
     "rootDir": ".",
-    "paths": {}
+    "paths": {},
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist", "tmp"]
 }
