--- a/apps/websocket-sample/tsconfig.app.json
+++ b/apps/websocket-sample/tsconfig.app.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "compilerOptions": {
+    "module": "CommonJS",
+    "outDir": "./dist"
+  }
 }
