--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"apps/**/*.ts\" --fix",
     "prisma:generate": "prisma generate --schema apps/prisma-sample/prisma/schema.prisma",
+    "prisma:migrate": "./setupPrismaDatabase.sh",
     "test": "jest --runInBand --config=./jest.config.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "./setupPrismaDatabase.sh && pnpx prisma generate --schema apps/prisma-sample/prisma/schema.prisma && DATABASE_URL=postgres://postgres:postgres@localhost:5433/prisma nx run-many --target=e2e --all --exclude=prisma-sample",
+    "test:e2e": "jest --runInBand --config=./jest.e2e.js",
     "test:cov:total": "DATABASE_URL=postgres://postgres:postgres@localhost:5433/prisma jest -c jest.cov.js",
     "nx": "nx"
   },
